add DB config for testing , add custom response , add pagination and sorting
