# services-api/app/Http/Controllers/ServiceController.php
@@ -3,7 +3,9 @@
 namespace App\Http\Controllers;
 use App\DTOs\ServiceDTO;
 use App\Http\Requests\ServiceRequest;
+use App\Http\Resources\ServiceResource;
 use App\Interfaces\ServiceServiceInterface;
+use Illuminate\Support\Facades\Log;
 use OpenApi\Annotations as OA;
 use App\Models\Service;
 use Illuminate\Http\Request;
@@ -32,10 +34,38 @@ class ServiceController extends Controller
      * @OA\Get(
      *     path="/api/services",
      *     summary="Get a list of services",
-     *     description="Returns a list of services based on the API key",
+     *     description="Returns a list of services based on the API key. You can sort, paginate, and select specific fields.",
      *     operationId="index",
      *     tags={"Services"},
      *     security={{"bearerAuth": {}}},
+     *     @OA\Parameter(
+     *         name="sort",
+     *         in="query",
+     *         description="Field to sort the results by.",
+     *         required=false,
+     *         @OA\Schema(type="string")
+     *     ),
+     *     @OA\Parameter(
+     *         name="direction",
+     *         in="query",
+     *         description="Sorting direction. 'asc' for ascending, 'desc' for descending.",
+     *         required=false,
+     *         @OA\Schema(type="string", enum={"asc", "desc"})
+     *     ),
+     *     @OA\Parameter(
+     *         name="per_page",
+     *         in="query",
+     *         description="Number of items per page.",
+     *         required=false,
+     *         @OA\Schema(type="integer")
+     *     ),
+     *     @OA\Parameter(
+     *         name="fields",
+     *         in="query",
+     *         description="Comma-separated list of fields to be returned in the response.",
+     *         required=false,
+     *         @OA\Schema(type="string",format="csv")
+     *     ),
      *     @OA\Response(
      *         response=200,
      *         description="Successful operation",
@@ -53,12 +83,21 @@ class ServiceController extends Controller
      *     )
      * )
      */
+
     public function index()
     {
         $authorizationHeader = request()->header('Authorization');
-        $services = $this->serviceService->getAllServices($authorizationHeader);
+        $sortField = request()->input('sort', 'id');
+        $sortDirection = request()->input('direction', 'asc');
+        $perPage = request()->input('per_page', 10);
+        $selectedFields = request()->input('fields', '');
 
-        return response()->json(['data' => $services], 200);
+
+        $services = $this->serviceService->getAllServices($authorizationHeader,$selectedFields,$sortField,$sortDirection,$perPage);
+
+
+
+        return response()->ok(ServiceResource::collection($services));
     }
 
 
@@ -99,7 +138,7 @@ class ServiceController extends Controller
 
         $service = $this->serviceService->createService($serviceDTO);
 
-        return response()->json(['data' => $service], 201);
+        return response()->created(new ServiceResource($service));
     }
 
 
